<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/nav_home" android:title="Home" android:icon="@drawable/ic_home"/>
<item android:id="@+id/nav_friends" android:title="Feed" android:icon="@drawable/ic_friends"/>
<item android:id="@+id/nav_log" android:title="Log" android:icon="@drawable/ic_log"/>
<item android:id="@+id/nav_rankings" android:title="Rankings" android:icon="@drawable/ic_rankings"/>
<item android:id="@+id/nav_profile" android:title="Profile" android:icon="@drawable/ic_profile"/>
</menu>
