...
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maya P."
                android:textColor="@color/color_text_primary"
                android:textSize="22sp"
                android:textStyle="bold" />
...
